# HackerLand

./: CMakeLists.txt  HackerLand.desktop  README.md  build.hl  install.hl  remove.hl
examples-configs/: Look.toml
examples-configs/micro-composer/cage-like/: Config.toml
examples-configs/micro-composer/gamescope-like/: Config.toml
misc/: config.toml  hackerland.toml
nix/: configuration.nix  flake.nix
resources/: resources.qrc
source-code/: App.tsx  CMakeLists.txt  constants.ts  index.html  main.cpp  meson.build  meson_options.txt  package.json  tiling_window_manager.cpp  tiling_window_manager.h  types.ts
source-code/bar/: Cargo.toml
source-code/bar/src/: main.rs
source-code/bg/: Cargo.toml
source-code/bg/src/: main.rs
source-code/cli/: shard.yml
source-code/cli/src/: main.cr
source-code/components/: Bar.tsx  Launcher.tsx  Terminal.tsx
source-code/src/: config.cpp  config.h  input.c  ipc_server.cpp  ipc_server.h  layout.c  main.c  main.cpp  output.c  server.h  tiling_window_manager.cpp  tiling_window_manager.h  ui.c
source-code/utils/: hkParser.ts
src/: hackerlandwm-msg.cpp  main.cpp
src/compositor/: IPCServer.cpp  IPCServer.h  LockScreen.cpp  LockScreen.h  MultiMonitor.cpp  MultiMonitor.h  ScreencastManager.cpp  ScreencastManager.h  WMCompositor.cpp  WMCompositor.h  WMLayerShell.cpp  WMLayerShell.h  WMOutput.cpp  WMOutput.h  WMSurface.cpp  WMSurface.h  WMXdgShell.cpp  WMXdgShell.h  WindowRenderState.h
src/core/: AnimationEngine.cpp  AnimationEngine.h  Config.cpp  Config.h  GamepadHandler.cpp  GamepadHandler.h  InputHandler.cpp  InputHandler.h  LockScreen.cpp  LockScreen.h  TilingEngine.cpp  TilingEngine.h  Window.cpp  Window.h  WindowRules.cpp  WindowRules.h  Workspace.cpp  Workspace.h
src/ui/: AppLauncher.cpp  AppLauncher.h  BarWidget.cpp  BarWidget.h  GLBlurRenderer.cpp  GLBlurRenderer.h  GlassWidget.cpp  GlassWidget.h  NotificationOverlay.cpp  NotificationOverlay.h  RenderEngine.cpp  RenderEngine.h  WorkspaceSwitcher.cpp  WorkspaceSwitcher.h
