[package]
name = "hackerland-bar"
version = "0.3.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_6"] }
gtk4-layer-shell = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sysinfo = "0.29"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
